--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "form",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "build": "npm run webpack",
+    "dev": "run-p client server",
+    "client": "webpack --watch --config client/webpack.config.js",
+    "server": "nodemon server",
+    "webpack": "webpack --config client/webpack.config.js"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "repository": {
     "type": "git",
@@ -15,5 +25,22 @@
   "bugs": {
     "url": "https://github.com/phill-mutu/Form/issues"
   },
-  "homepage": "https://github.com/phill-mutu/Form#readme"
+  "homepage": "https://github.com/phill-mutu/Form#readme",
+  "description": "",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
+  }
 }
