--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
   "homepage": "https://github.com/phill-mutu/Form#readme",
   "description": "",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.17",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
