--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "run-p client server",
     "client": "webpack --watch --config client/webpack.config.js",
     "server": "nodemon server",
-    "webpack": "webpack --config client/webpack.config.js"
+    "webpack": "webpack --config client/webpack.config.js",
+    "knex": "knex --knexfile ./server/db/knexfile.js"
   },
   "babel": {
     "presets": [
@@ -27,7 +28,6 @@
   },
   "homepage": "https://github.com/phill-mutu/Form#readme",
   "description": "",
- 
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.21.17",
+    "knex": "^0.21.21",
     "pg": "^8.5.1",
     "superagent": "^6.1.0"
   }
